Refactor stream operations to use collect() instead of toList() for better compatibility